...
        onUpdateValue={updateInputValueHandler.bind(this, "email")}
        value={enteredEmail}
        keyboardType="email-address"
        isInvalid={emailIsInvalid}
        textContentType="username"
        autoComplete="username"
        testID="email-input"
      />
      {isLogin && (
        <Input
          label={t("password")}
          onUpdateValue={updateInputValueHandler.bind(this, "password")}
          secure
          value={enteredPassword}
          isInvalid={passwordIsInvalid}
          textContentType="password"
          autoComplete="current-password"
          testID="password-input"
        />
      )}
      {!isLogin && (
        <>
          <Input
            label={t("password")}
...
        </>
      )}
      <View style={styles.buttonContainer}>
        <AnimatedLoadingButton
          onPress={submitHandler}
          loading={loading}
          testID={isLogin ? "login-submit-button" : "signup-submit-button"}
        >
          {isLogin ? t("log_in") : t("sign_up")}
        </AnimatedLoadingButton>
      </View>
    </View>
  );
...
